--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "pcat - photo app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon app"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,10 @@
   },
   "homepage": "https://github.com/utopkaya/pcat#readme",
   "devDependencies": {
+    "nodemon": "^2.0.18",
     "prettier": "2.7.1"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
